# noir

./: .editorconfig  Cargo.toml
.github/workflows/: ci.yml
chains/noir/core-primitives/: Cargo.toml
chains/noir/core-primitives/src/: lib.rs
chains/noir/node/: Cargo.toml
chains/noir/runtime/: Cargo.toml
chains/noir/runtime/src/: deps.rs  lib.rs  prelude.rs  version.rs
chains/noir/runtime/src/config/: aura.rs  balances.rs  grandpa.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs
core-primitives/: Cargo.toml
core-primitives/src/: lib.rs
frame/alias/: Cargo.toml
frame/alias/src/: benchmarking.rs  generic.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
node/: Cargo.toml
node/noir/: Cargo.toml  build.rs
node/noir/src/: chain_spec.rs  cli.rs  command.rs  eth.rs  lib.rs  main.rs  service.rs
node/noir/src/rpc/: eth.rs
node/src/: chain_spec.rs  client.rs  command.rs  eth.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
primitives/babel/: Cargo.toml
primitives/babel/src/: lib.rs
primitives/core/: Cargo.toml
primitives/core/src/: bech32.rs  bip32.rs  crypto.rs  crypto_bytes.rs  ecdsa.rs  lib.rs  p256.rs  webauthn.rs
primitives/core/src/babel/: mod.rs
primitives/core/src/bitcoin/: bech32.rs  bip32.rs  bip44.rs  mod.rs
primitives/core/src/cosmos/: mod.rs
primitives/core/src/ethereum/: mod.rs
primitives/core/src/multiformats/: mod.rs
primitives/crypto/: Cargo.toml
primitives/crypto/hashing/: Cargo.toml
primitives/crypto/hashing/src/: lib.rs
primitives/crypto/src/: p256.rs  webauthn.rs
primitives/io/: Cargo.toml
primitives/io/src/: lib.rs
primitives/runtime/: Cargo.toml
primitives/runtime/src/: accountid32.rs  lib.rs  multikey.rs  traits.rs  universaladdress.rs
primitives/runtime/src/self_contained/: mod.rs  unchecked_extrinsic.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/noir/: Cargo.toml  build.rs
runtime/noir/src/: compat.rs  deps.rs  lib.rs  precompiles.rs  prelude.rs  version.rs
runtime/noir/src/compat/: cosm.rs  ethereum.rs  evm.rs
runtime/noir/src/config/: aura.rs  balances.rs  grandpa.rs  mod.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs
runtime/src/: lib.rs  precompiles.rs
runtime/src/compat/: cosm.rs  evm.rs
