[workspace]
resolver = "2"

members = [
	"chains/noir/core-primitives",
	"chains/noir/node",
	"chains/noir/runtime",
	"frame/alias",
	"primitives/core",
	"primitives/crypto/hashing",
	"primitives/io",
	"primitives/runtime",
]

[workspace.package]
authors = ["Haderech Pte. Ltd."]
edition = "2021"
repository = "https://github.com/noirhq/noir.git"
version = "0.4.0-dev"

[workspace.dependencies]
# noir
np-core = { path = "primitives/core", default-features = false }
np-crypto-hashing = { path = "primitives/crypto/hashing", default-features = false }
np-io = { path = "primitives/io", default-features = false }
np-runtime = { path = "primitives/runtime", default-features = false }
pallet-alias = { path = "frame/alias", default-features = false }

# frontier
fp-self-contained = { git = "https://github.com/noirhq/frontier", branch = "polkadot-v1.11.0", default-features = false }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"

lto = "fat"
codegen-units = 1
