[package]
name = "noir-core-primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
publish = false

[dependencies]
np-core = { workspace = true }
np-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"np-core/std",
	"np-runtime/std",
]
