[package]
name = "pallet-alias"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "GPL-3.0-or-later"
repository = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }

frame-benchmarking = { version = "33.0.0", optional = true }
frame-support = { version = "33.0.0", default-features = false, features = ["experimental"] }
frame-system = { version = "33.0.0", default-features = false }
sp-core = { version = "32.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false }
sp-runtime = { version = "36.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# workspace crates
np-core = { workspace = true }
np-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"np-core/std",
	"np-runtime/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
