[package]
name = "noir"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "GPL-3.0-or-later"
repository = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
noir-runtime = { path = "../../runtime/noir" }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0" }

[features]
runtime-benchmarks = []
