[package]
name = "np-io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
publish = false

[dependencies]
sp-io = { version = "35.0.0", default-features = false }
sp-runtime-interface = { version = "27.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# workspace crates
np-core = { workspace = true }
np-crypto-hashing = { workspace = true }

[features]
default = ["std"]
std = [
	"np-core/std",
	"np-crypto-hashing/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-std/std",
]
