[package]
name = "np-runtime"
version = { workspace = true }
license = "Apache-2.0"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
array-bytes = { version = "6.2.3", optional = true }
base64ct = { version = "1.6.0", optional = true }
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.11.3", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"], optional = true }
thiserror = { version = "1.0.61", optional = true }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

# workspace crates
fp-self-contained = { workspace = true }
np-core = { workspace = true }
np-io = { workspace = true }

[features]
default = ["std"]
std = [
	"base64ct/std",
	"fp-self-contained/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"np-core/std",
	"np-io/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"thiserror",
]
serde = [
	"dep:serde",
	"array-bytes",
	"base64ct/alloc",
]
runtime-benchmarks = []
try-runtime = []
