[package]
name = "np-runtime"
version = { workspace = true }
license = "Apache-2.0"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
array-bytes = { version = "6.2.3", optional = true }
base64ct = { version = "1.6.0", optional = true }
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "1.0.61", optional = true }

frame-support = { version = "33.0.0", default-features = false }
sp-core = { version = "32.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false }
sp-runtime = { version = "36.0.0", default-features = false }
sp-runtime-interface = { version = "27.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# workspace crates
fp-self-contained = { workspace = true }
np-core = { workspace = true }
np-io = { workspace = true }

[features]
default = ["std"]
std = [
	"base64ct/std",
	"fp-self-contained/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"np-core/std",
	"np-io/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"thiserror",
]
serde = [
	"dep:serde",
	"array-bytes",
	"base64ct/alloc",
]
runtime-benchmarks = []
try-runtime = []
