[package]
name = "np-runtime"
version = { workspace = true }
license = "Apache-2.0"

authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
array-bytes = { workspace = true, optional = true }
base64ct = { workspace = true, optional = true }
buidl = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true, optional = true }

# noir
np-core = { workspace = true }
np-io = { workspace = true }

# substrate
fp-self-contained = { workspace = true }
frame-support = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"base64ct/std",
	"buidl/std",
	"fp-self-contained/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"np-core/std",
	"np-io/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"thiserror",
]
serde = [
	"dep:serde",
	"array-bytes",
	"base64ct/alloc",
]
try-runtime = []
