[package]
name = "noir-runtime-common"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
noir-core-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"noir-core-primitives/std",
]
