[package]
name = "noir-core-primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "32.0.0", default-features = false }

np-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"np-runtime/std",
	"sp-core/std",
]
