[package]
name = "noir-runtime"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "GPL-3.0-or-later"
repository = { workspace = true }
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
smallvec = { version = "1.13.2" }

frame-executive = { version = "33.0.0", default-features = false }
frame-support = { version = "33.0.0", default-features = false, features = ["experimental"] }
frame-system = { version = "33.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "31.0.0", default-features = false }
pallet-aura = { version = "32.0.0", default-features = false }
pallet-balances = { version = "34.0.0", default-features = false }
pallet-grandpa = { version = "33.0.0", default-features = false }
pallet-sudo = { version = "33.0.0", default-features = false }
pallet-timestamp = { version = "32.0.0", default-features = false }
pallet-transaction-payment = { version = "33.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "33.0.0", default-features = false }

frame-benchmarking = { version = "33.0.0", default-features = false, optional = true }
frame-try-runtime = { version = "0.39.0", default-features = false, optional = true }

sp-api = { version = "31.0.0", default-features = false }
sp-block-builder = { version = "31.0.0", default-features = false }
sp-consensus-aura = { version = "0.37.0", default-features = false }
sp-consensus-grandpa = { version = "18.0.0", default-features = false }
sp-core = { version = "32.0.0", default-features = false }
sp-genesis-builder = { version = "0.12.0", default-features = false }
sp-inherents = { version = "31.0.0", default-features = false }
sp-offchain = { version = "31.0.0", default-features = false }
sp-runtime = { version = "36.0.0", default-features = false }
sp-session = { version = "32.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "31.0.0", default-features = false }
sp-version = { version = "34.0.0", default-features = false }

noir-core-primitives = { path = "../core-primitives", default-features = false }
np-core = { workspace = true, default-features = false, features = ["serde"] }
np-runtime = { workspace = true, default-features = false, features = ["serde"] }

[build-dependencies]
substrate-wasm-builder = { version = "22.0.1" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"frame-try-runtime?/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"noir-core-primitives/std",
	"np-core/std",
	"np-runtime/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
]
