[package]
name = "np-crypto-hashing"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"
repository = { workspace = true }
publish = false

[dependencies]
ripemd = { version = "0.1.3", default-features = false }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

[features]
default = ["std"]
std = [
	"ripemd/std",
	"sp-crypto-hashing/std",
]
